--- a/eventBubbling.html
+++ b/eventBubbling.html
@@ -46,13 +46,13 @@
         let subchild=document.getElementById("subchild");
         
         parent.addEventListener("click",()=>{
-            console.log("Parent clicked!");
+            alert("Parent clicked!");
         })
         child.addEventListener("click",(e)=>{
-            console.log("Child clicked!");
+            alert("Child clicked!");
         })
         subchild.addEventListener("click",(e)=>{
-            console.log("SubChild Clicked!")
+            alert("SubChild Clicked!")
         });
     </script>
 </body>
